[project]
name = "collabsort-agent"
version = "0.1.0"
description = "An agent for a collaborative sorting task"
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gym-collabsort",
    "tyro>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.sources]
gym-collabsort = { path = "../gym-collabsort", editable = true }
