[project]
name = "collabsort-agent"
version = "0.1.0"
description = "An agent for a collaborative sorting task"
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
requires-python = ">=3.12"
# - Pinpointing PyTorch to last version with MPS support for macOS Monterey.
# Feel free to upgrade to a more recent version if your environment supports it.
# - Downgrading setuptools because TensorBoard 2.20 still relies on pkg_resources, which was removed from Python 3.12+:
# https://github.com/tensorflow/tensorboard/issues/7003
dependencies = [
    "gym-collabsort",
    "setuptools<=81",
    "tensorboard>=2.20.0",
    "torch==2.4.1",
    "tqdm>=4.67.3",
    "tyro>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
gym-collabsort = { path = "../gym-collabsort", editable = true }

[tool.ruff.lint]
# Enhance checking. See https://docs.astral.sh/ruff/rules/#flake8-bugbear-b for details
extend-select = ["B"]

[tool.pytest.ini_options]
# Add code coverage reporting
addopts = "--cov=collabsort_agent --cov-report=term-missing"
# Until TensorBoard removes reliance on pkg_resources, which was removed from Python 3.12+:
filterwarnings = ["ignore::UserWarning"]